syntax = "proto3";

package helloworld;

service Greeter {
  //创建rpc 方法体
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// 请求参数
message HelloRequest {
  string name = 1;
}

// 返回参数
message HelloReply {
  string message = 1;
}